src/styles/_reset.scss
// RESET

* {
    box-sizing: border-box;
}

// On MACOS, avoid trackpad to cause white space at the bottom on scroll
html,
body {
    overflow: hidden;
}

html {
    color: #000000;
    background: #ffffff;
}
body,
div,
dl,
dt,
dd,
ul,
ol,
li,
h1,
h2,
h3,
h4,
h5,
h6,
pre,
code,
form,
fieldset,
legend,
input,
textarea,
p,
blockquote,
th,
td {
    padding: 0;
    margin: 0;
}
table {
    border-spacing: 0;
    border-collapse: collapse;
}
fieldset,
img {
    border: 0;
}
address,
caption,
cite,
code,
dfn,
em,
th,
var {
    font-style: normal;
    font-weight: 400;
}
ol,
ul {
    list-style: none;
}

a {
    text-decoration: none;
}
caption,
th {
    text-align: left;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    font-size: 100%;
    font-weight: 400;
}
q:before,
q:after {
    content: '';
}
abbr,
acronym {
    font-variant: normal;
    border: 0;
}
sub {
    vertical-align: text-bottom;
}
figure {
    margin: 0;
}
input,
textarea,
select {
    font-family: inherit;
    font-size: inherit;

    font-weight: inherit;
}

input {
    border-radius: 0;
    -webkit-appearance: none;
}
legend {
    color: #000000;
}
#yui3-css-stamp.cssreset {
    display: none;
}

button {
    display: inline-block;
    margin: 0;
    font-size: rem(16);
    text-decoration: none;
    background-color: #ffffff;
    border: none;
}

